задачa 1 урока 42